Dans l'index j'ai rajouté la NFT is coming

--- a/index.html
+++ b/index.html
@@ -324,7 +324,25 @@ Mattieu écrire -->
         <div class="contact"></div>
         </div>
     </section>
+    <!--_________________________NFT___________________________________________________________________NFT______________________________________________________________________-->
 
+    <div class="MuiContainer-root MuiContainer-maxWidthLg" id="nft">
+        <div class="MuiGrid-root MuiGrid-container">
+            <div class="MuiGrid-root text-center position-relative MuiGrid-grid-xs-12 MuiGrid-grid-md-6">
+                <div class="px-4"><img src="images/nft2.png" class="img-fluid mx-auto w-100"
+                        style="width: 100%; max-width: 409px;"></div>
+            </div>
+            <div class="MuiGrid-root MuiGrid-grid-xs-12 MuiGrid-grid-sm-6">
+                <div class="px-2">
+                    <h1 class="section--heading mt-5">NFTs</h1>
+                    <p class="para" data-aos="fade-up" data-aos-duration="1300">Join The Incentive club. Our collectible
+                        NFTs are just around the corner. By owning one of these NFTs, holders can enjoy an amazing extra
+                        benefit! The collection is in the works, the first design will be tweeted on October 20, 2022,
+                        so get tweeting and let's go win some crazy rewards.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--_________________________ROADMAP___________________________________________________________________ROADMAP______________________________________________________________________-->
     <section class="mainsection roadmap">
         <h5 class="sbtitle">WHY THE INCENTIVE</h5>
