correction et NFT

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Mattieu écrire -->
                 <div class="circle rondun">
                     <h4 class="sectiontitleblack">
                         <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_fyjtnw8p.json"
-                            background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay>
+                            background="transparent" speed="1" style="width: 300px; height: 300px;" autoplay>
                         </lottie-player>
                     </h4>
                 </div>
@@ -99,7 +99,7 @@ Mattieu écrire -->
                 <div class="circle rondun">
                     <h4 class="sectiontitleblack">
                         <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_k8zfqp2u.json"
-                            background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay>
+                            background="transparent" speed="1" style="width: 300px; height: 300px;" autoplay>
                         </lottie-player>
                     </h4>
                 </div>
@@ -112,7 +112,7 @@ Mattieu écrire -->
                     <h4 class="sectiontitleblack">
                         <h1 class="sectiontitleblack">
                             <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_cx7t6bmc.json"
-                                background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay>
+                                background="transparent" speed="1" style="width: 300px; height: 300px;" autoplay>
                             </lottie-player>
                     </h4>
                 </div>
@@ -324,7 +324,25 @@ Mattieu écrire -->
         <div class="contact"></div>
         </div>
     </section>
+   <!--_________________________NFT___________________________________________________________________NFT______________________________________________________________________-->
 
+   <div class="MuiContainer-root MuiContainer-maxWidthLg" id="nft">
+    <div class="MuiGrid-root MuiGrid-container">
+        <div class="MuiGrid-root text-center position-relative MuiGrid-grid-xs-12 MuiGrid-grid-md-6">
+            <div class="px-4"><img src="images/nft2.png" class="img-fluid mx-auto w-100"
+                    style="width: 100%; max-width: 409px;"></div>
+        </div>
+        <div class="MuiGrid-root MuiGrid-grid-xs-12 MuiGrid-grid-sm-6">
+            <div class="px-2">
+                <h1 class="section--heading mt-5">NFTs</h1>
+                <p class="para" data-aos="fade-up" data-aos-duration="1300">Join The Incentive club. Our collectible
+                    NFTs are just around the corner. By owning one of these NFTs, holders can enjoy an amazing extra
+                    benefit! The collection is in the works, the first design will be tweeted on October 20, 2022,
+                    so get tweeting and let's go win some crazy rewards.</p>
+            </div>
+        </div>
+    </div>
+</div>
     <!--_________________________ROADMAP___________________________________________________________________ROADMAP______________________________________________________________________-->
     <section class="mainsection roadmap">
         <h5 class="sbtitle">WHY THE INCENTIVE</h5>
