reglé le scroll txt

--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@ Mattieu écrire -->
 
 
         </section>
-        <div class="movetext">
-            <marquee scrollamount="10">DISCOVER THE TWEET2EARN   DISCOVER THE TWEET2EARN  -  DISCOVER THE TWEET2EARN  -  DISCOVER THE TWEET    2EARN    DISCOVER THE TWEET2EARN</marquee>
+        <div class="scrolltxt2">
+            <span class="txt">DISCOVER THE TWEET2EARN - DISCOVER THE TWEET2EARN - </span>
+            <span class="txt">DISCOVER THE TWEET2EARN - DISCOVER THE TWEET2EARN</span>
         </div>
+
     </header>
 
     <!--_________________________HOWITWORK___________________________________________________________________HOWITWORK______________________________________________________________________-->
